test_case/rust-lang_rust/51375_394964120.rs

    let foo = 42u32;
    const FOO : u32 = foo; // error: attempt to use a non-constant value in a
                           //        constant
    